# fastapi-hotel-booking

./: .dockerignore  .env-docker-template  .env-template  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 2025_02_08_1323-15f462c8d437_add_hotel.py  2025_02_08_1447-2a46f9f9d4d2_add_users.py  2025_02_10_1025-d4dff9b1046a_add_hotels.py  2025_02_10_1101-1b7f43199fe5_add_bookings.py  2025_02_10_1106-0fec630da230_add_rooms.py  2025_02_10_1110-222155cc5068_fix_booking.py  2025_02_10_1113-8cbd923a5309_fix_booking.py  2025_02_10_1115-28a4f09a46dd_fix_rooms.py  2025_02_10_1128-e0755fdc7645_fix_user.py  2025_02_10_1202-425913d0fc9f_fix_user.py  2025_02_10_1209-34ea86683630_fix_user.py  d2c40e17deb4_initial_migration.py
docker/: app.sh  celery.sh
src/: config.py  database.py  exceptions.py  logger.py  main.py  models.py  services.py  testing_data.sql
src/admin/: auth.py  views.py
src/auth/: exception.py  jwt_utils.py  pwd_utils.py  router.py  schemas.py
src/bookings/: models.py  router.py  schemas.py  service.py
src/dev/: router.py
src/hotels/: models.py  router.py  service.py
src/images/: router.py
src/pages/: router.py
src/rooms/: models.py  router.py  service.py
src/tasks/: email_templates.py  tasks.py
src/templates/: hotels.html
src/tests/: conftest.py
src/tests/api_tests/: test_booking.py  test_hotels.py  test_users.py
src/tests/mock_data/: mock_hotels.json  mock_rooms.json  mock_users.json
src/users/: models.py  router.py  schemas.py  service.py
