[tool.poetry]
name = "my-booking"
version = "0.1.0"
description = ""
authors = ["riddler_rid <unkownrid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
python-multipart = "^0.0.20"
jinja2 = "^3.1.5"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
flower = "^2.0.1"
celery = "^5.4.0"
pillow = "^11.1.0"
sqladmin = "^0.20.1"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
