[tool.poetry]
name = "my-booking"
version = "0.1.0"
description = ""
authors = ["riddler_rid <unkownrid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
python-multipart = "^0.0.20"
jinja2 = "^3.1.5"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
flower = "^2.0.1"
celery = "^5.4.0"
pillow = "^11.1.0"
sqladmin = "^0.20.1"
itsdangerous = "^2.2.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
python-json-logger = "^3.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.21.0"}
fastapi-versioning = "^0.10.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
autoflake = "^2.3.1"
isort = {extras = ["colors"], version = "^6.0.0"}
pyright = "^1.1.394"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
#extend = "linters/black.toml"
extend-exclude  = '''
    ^/(
        src/alembic
    )
'''

[tool.isort]
profile = "black"
extend_skip = ["src/alembic"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
check_diff = true
imports = ["sqlalchemy", "src"]

[tool.pyright]
include = ["src"]
ignore = ["/alembic", "/src/services.py"]
exclude = [
]
venv = ".venv"